Bug fixes
uhh hoopsie doopsoes yippee wooo wooo wooo bugs got squashed!!

--- a/Work_Folder/home_page/home.css
+++ b/Work_Folder/home_page/home.css
@@ -1,6 +1,5 @@
 #image{
-display: block;
-margin: 0 auto;
+object-position: left;
 }
 #image2{
     object-position: right;
